<resources>
    <string name="app_name">Dots And Boxes \n Multiplayer</string>

    <string name="vs_computer">Vs Computer</string>
    <string name="two_players">2 Players</string>
    <string name="three_players">3 Players</string>
    <string name="four_players">4 Players</string>
    <string name="rate_app">Rate this app</string>
    <string name="share">Share</string>
    <string name="how_to_play">How to Play</string>
    <string name="settings">Settings</string>

    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="player3">Player3</string>
    <string name="player4">Player4</string>
    <string name="player5">Player5</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="title_format">%s\'s turn</string>
    <string name="score_format">%s\'s score is </string>
    <string name="winner_format">%s win!</string>


    <string name="settings_grid_size">Grid Size</string>
    <string name="settings_color">Color</string>
    <string name="settings_color_alpha">Color Alpha</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_bgm">Music</string>
    <string name="settings_borders">Borders</string>

    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>

    <string name="how_to_play_msg">
        \n
        Starting with an empty grid of dots, two players (sometimes more) take turns adding a single horizontal or vertical line between two unjoined adjacent dots.\n\n
        The player who completes the fourth side of a 1×1 box earns one point and takes another turn. (A point is typically recorded by placing a mark that identifies the player in the box, such as an initial).\n\n
        The game ends when no more lines can be placed. The winner is the player with the most points.\n\n
        The board may be of any size. When short on time, a 2×2 board (a square of 9 dots) is good for beginners. A 5×5 is good for experts.

    </string>


    <string name="quit_msg">Quit the Game ?</string>
    <string name="share_msg">"Share an app for you."</string>
</resources>
