<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_home_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/HomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <Button
            android:id="@+id/vs_computer"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vs_computer"/>

        <Button
            android:id="@+id/two_players"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_players"/>

        <Button
            android:id="@+id/three_players"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three_players"/>

        <Button
            android:id="@+id/four_players"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_players"/>

        <Button
            android:id="@+id/how_to_play"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"/>

        <Button
            android:id="@+id/settings"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>

        <Button
            android:id="@+id/quit"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit"/>
    </LinearLayout>

    <include layout="@layout/layout_ads_50"/>
</LinearLayout>
